Temporary fix for overflow in the settings page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,7 +74,7 @@ html, body {
 
 #main {
 	height: 100%;
-	overflow-y: auto;
+	overflow: auto;
 	width: calc(100% - 10rem);
 	background-color: #FCFCFC;
 	float: right;
